* Added a review/redo option to character creation in the intro.
* Renamed FemmeBoy body type to Trap.
* Added a Voluptous option for female start.
* Using cheats to get items in the tent now gives 10 of every item instead of 1.
* Fixed a bug in Alchemy that would cause brewing to consume 2x the amount of ingredients actually required.

* Streamlined Chief talk scenes (removed Next, now looks more in line with other NPC dialogue).
* Adjusted pacing in the Equines win scenes. They are now split up into multiple pages rather than one long scene.
* Adjusted pacing in Barnaby's blowjob scenes (the bartender of the Maidens' Bane) by splitting the scene in multiple pages.

* Major update to the structure of the code base (hence the update from 0.4 to 0.5).
 - The entire code base has been converted to ES6 modules and TypeScript instead of JavaScript, making much of the code strictly type checked (finding/fixing a fair number of obscure bugs), and preventing pollution of the global namespace.
 - The build system has been changed from gulp to webpack.
 - Nodejs is used to get the latest versions of all vendor packages.
 - More than anything else, this gives me a more stable platform to add content to. 
* What does this update mean for you as a player? It shouldn't change anything, but due to the magnitude of the changes, it's possible that some errors have sneaked their way through. I'll be releasing a slightly bigger, non-uglified development version that contains some more backtrace information until things stabilize, please report any issues that show up.
 - For those that used the player object in the console to cheat, this method is unfortunately not available anymore. If there's requests for that kind of thing, I might consider making the objects accessible in some way.